--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,8 @@ body {
     font-family: 'Georgia', Times, Times New Roman, serif;
     font-weight: bold;
 	font-size: 30px;
-    padding: 30px;
-    margin: 10px;
+    padding: 35px;
+    margin-right: 300px;
     border: 30px;
 }
 
@@ -27,7 +27,8 @@ body {
     background-color: white;
     padding: 20px;
     margin: 10px;
-    border: 20px;
+    align-self: center;
+    
 }
 
 img {
