--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,10 @@ body {
 	font-size: 30px;
     padding: 35px;
     margin-right: 300px;
+    margin-left: 10px;
     border: 30px;
+    margin-top: -8px;
+    margin-bottom: -8px;
 }
 
 /* Body */
@@ -26,9 +29,12 @@ body {
 .container {
     background-color: white;
     padding: 20px;
-    margin: 10px;
-    align-self: center;
-    
+    margin: 20px;    
+}
+
+header {
+    margin: -10px;
+    margin-bottom: 20px;
 }
 
 img {
